Railway deploy ready - Update port to use Railway PORT env var